# QuickLock-Harness-FW

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults
alarm/alarm_task/: CMakeLists.txt  alarm_task.c
alarm/alarm_task/include/: alarm_task.h
battery_status/battery_status_task/: CMakeLists.txt  battery_status_task.c
battery_status/battery_status_task/include/: battery_status_task.h
belt_detection/belt_detection_task/: CMakeLists.txt  belt_detection_task.c
belt_detection/belt_detection_task/include/: belt_detection_task.h
ble/ble_contract/: CMakeLists.txt
ble/ble_contract/include/: ble_contract.h
ble/ble_events/: CMakeLists.txt  ble_events.c
ble/ble_events/include/: ble_events.h
ble/ble_hal/: CMakeLists.txt  ble_hal.c
ble/ble_hal/include/: ble_hal.h
ble/ble_security_bridge/: CMakeLists.txt  ble_security_bridge.c
ble/ble_security_bridge/include/: ble_security_bridge.h
ble/ble_task/: CMakeLists.txt  ble_task.c
ble/ble_task/include/: ble_task.h
ble/config/: CMakeLists.txt
ble/config/include/: config.h
ble/proximity/: CMakeLists.txt  proximity.c
ble/proximity/include/: proximity.h
ble/proximity/test/: CMakeLists.txt  test_proximity.c
ble/ql_log/: CMakeLists.txt
ble/ql_log/include/: ql_log.h
common/: CMakeLists.txt  globals.c
common/include/: common_config.h  globals.h
components/ql_console/: CMakeLists.txt  ql_console.c  ql_console_bench_hooks.c
components/ql_console/include/: ql_console.h
docs/: ble_security_integration.md  ble_subsytem.md
imu/: CMakeLists.txt  imu_detection.c  imu_detection.h  imu_hal.c  imu_hal.h  imu_ring_buffer.c  imu_ring_buffer.h  imu_tilt_filter.c  imu_tilt_filter.h  imu_walk_detector.c  imu_walk_detector.h
led/led_task/: CMakeLists.txt  led_task.c
led/led_task/include/: led_task.h
main/: CMakeLists.txt  hello_world_main.c  main.c
sample_data/: analyze_rssi.py  rssi_calibration_all.csv  rssi_summary_by_distance.csv
security_core/security_core_task/: CMakeLists.txt  security_core_task.c
security_core/security_core_task/include/: security_core_task.h
